@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 06-04-2005 changed: Visualisations now accept a position on screen parameter.  !!XBMC WILL CRASH IF YOU DON'T UPDATE YOUR VISUALISATIONS!!
   - 06-04-2005 fixed: Stack overflow in volumebar/playcontrol combination.
   - 06-04-2005 updated: Italian language file (Thnx to kotix)
   - 05-04-2005 removed: My Music Albums, Artists, and Genres views.  Use My Music Library instead.
